// Copyright 2017 Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wptdashboard;
option go_package = "generated";

import "google/protobuf/timestamp.proto";
import "test_run.proto";

// The pass rate from a collection of TestResults across TestRuns from different
// platforms (OS + browser).
message PassRateSummary {
  google.protobuf.Timestamp computed_start_time = 1;
  google.protobuf.Timestamp computed_end_time = 2;

  string base_name = 3;
  int32 num_total = 4;
  repeated int32 num_passed = 5; // ith entry => "i browsers passed"

  repeated TestRun test_runs = 6;
}
