// Copyright 2017 The WPT Dashboard Project. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package wptdashboard;
option go_package = "generated";

import "google/protobuf/timestamp.proto";

message TestRun {
  google.protobuf.Timestamp created_at = 1;

  // The first 10 characters of the SHA1 of the tested WPT revision
  string revision = 2;

  // Platform information
  string browser_name = 3;
  string browser_version = 4;
  string os_name = 5;
  string os_version = 6;

  // Resource URL for results JSON blob
  string results_url = 7;
}
